[gd_scene load_steps=23 format=2]

[ext_resource path="res://main/ui/_assets/themes/main.tres" type="Theme" id=1]
[ext_resource path="res://main/ui/status/affinity_panel_container/affinity_panel/AffinityPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/ui/_assets/affinity_icons/fire.png" type="Texture" id=3]
[ext_resource path="res://main/ui/_assets/affinity_icons/nuclear.png" type="Texture" id=4]
[ext_resource path="res://main/ui/_assets/affinity_icons/wind.png" type="Texture" id=5]
[ext_resource path="res://main/ui/_assets/affinity_icons/normal.png" type="Texture" id=6]
[ext_resource path="res://main/ui/_assets/affinity_icons/phys.png" type="Texture" id=7]
[ext_resource path="res://main/ui/_assets/affinity_icons/null.png" type="Texture" id=8]
[ext_resource path="res://main/ui/_assets/affinity_icons/water.png" type="Texture" id=9]
[ext_resource path="res://main/ui/_assets/affinity_icons/elec.png" type="Texture" id=10]
[ext_resource path="res://main/ui/_assets/affinity_icons/ghost.png" type="Texture" id=11]
[ext_resource path="res://main/ui/status/stat_bar/StatBar.tscn" type="PackedScene" id=12]
[ext_resource path="res://main/ui/combat/circle_menu/skill_button/SkillButton.tscn" type="PackedScene" id=13]
[ext_resource path="res://main/ui/status/circles.png" type="Texture" id=14]
[ext_resource path="res://main/ui/_assets/style_boxes/round_flat_panel.tres" type="StyleBox" id=15]
[ext_resource path="res://main/ui/combat/skill_container/skill_container.gd" type="Script" id=16]
[ext_resource path="res://main/ui/_assets/text_box/TextBox.tscn" type="PackedScene" id=17]
[ext_resource path="res://main/ui/status/portraits/duckling.png" type="Texture" id=18]
[ext_resource path="res://main/ui/_assets/ocean_background/OceanBackground.tscn" type="PackedScene" id=19]
[ext_resource path="res://main/ui/status/status.gd" type="Script" id=20]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 3.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 0.513726, 0.513726, 0.513726, 0.615686 )
anti_aliasing = false

[node name="Status" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Circles" type="TextureRect" parent="Control"]
margin_left = -248.0
margin_top = 304.0
margin_right = 252.0
margin_bottom = 804.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 250, 250 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Circles3" type="TextureRect" parent="Control"]
margin_left = 776.0
margin_top = -208.0
margin_right = 1276.0
margin_bottom = 292.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 250, 250 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OceanBackground" parent="." instance=ExtResource( 19 )]
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0

[node name="OceanBackground2" parent="." instance=ExtResource( 19 )]
margin_left = 5.0
margin_top = -592.0
margin_right = 5.0
margin_bottom = -592.0
flip = true

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="PanelContainer"]
margin_left = 424.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 8
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0
custom_constants/separation = 6

[node name="NameLabelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 28.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 0
custom_styles/panel = ExtResource( 15 )

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/NameLabelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 298.0
margin_bottom = 26.0
text = "Yukid"

[node name="ExpLabelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 0
custom_styles/panel = ExtResource( 15 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ExpLabelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 298.0
margin_bottom = 26.0

[node name="Level" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ExpLabelContainer/HBoxContainer"]
margin_right = 146.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "LVL 99 "

[node name="Exp" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ExpLabelContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 296.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Next: 1123"

[node name="AffinityPanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 288.0
margin_bottom = 132.0
size_flags_horizontal = 0
custom_styles/panel = ExtResource( 15 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 286.0
margin_bottom = 62.0
custom_constants/separation = 10

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer"]
visible = false
margin_right = 44.0
margin_bottom = 60.0
rect_min_size = Vector2( 44, 0 )

[node name="AffinityPanel5" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 32.0
margin_bottom = 60.0

[node name="Type" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel5/VBoxContainer" index="0"]
texture = ExtResource( 7 )

[node name="Effectiveness" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel5/VBoxContainer" index="1"]
texture = ExtResource( 6 )

[node name="AffinityPanel" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 42.0
margin_right = 74.0
margin_bottom = 60.0

[node name="Type" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel/VBoxContainer" index="0"]
texture = ExtResource( 3 )

[node name="Effectiveness" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel/VBoxContainer" index="1"]
texture = ExtResource( 6 )

[node name="AffinityPanel2" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 84.0
margin_right = 116.0
margin_bottom = 60.0

[node name="Type" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel2/VBoxContainer" index="0"]
texture = ExtResource( 10 )

[node name="Effectiveness" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel2/VBoxContainer" index="1"]
texture = ExtResource( 6 )

[node name="AffinityPanel3" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 126.0
margin_right = 158.0
margin_bottom = 60.0

[node name="Type" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel3/VBoxContainer" index="0"]
texture = ExtResource( 9 )

[node name="Effectiveness" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel3/VBoxContainer" index="1"]
texture = ExtResource( 6 )

[node name="AffinityPanel4" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 168.0
margin_right = 200.0
margin_bottom = 60.0

[node name="Type" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel4/VBoxContainer" index="0"]
texture = ExtResource( 5 )

[node name="AffinityPanel6" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 210.0
margin_right = 242.0
margin_bottom = 60.0

[node name="Type" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel6/VBoxContainer" index="0"]
texture = ExtResource( 4 )

[node name="Effectiveness" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel6/VBoxContainer" index="1"]
texture = ExtResource( 8 )

[node name="AffinityPanel7" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 252.0
margin_right = 284.0
margin_bottom = 60.0

[node name="Type" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel7/VBoxContainer" index="0"]
texture = ExtResource( 11 )

[node name="Effectiveness" parent="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel7/VBoxContainer" index="1"]
texture = ExtResource( 8 )

[node name="StarBarContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 448.0
margin_bottom = 288.0
rect_min_size = Vector2( 448, 0 )
size_flags_horizontal = 2
custom_styles/panel = ExtResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/StarBarContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 446.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/StarBarContainer/VBoxContainer"]
margin_right = 444.0
margin_bottom = 26.0
focus_neighbour_top = NodePath("../Button5")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )

[node name="STR" parent="PanelContainer/MarginContainer/VBoxContainer/StarBarContainer/VBoxContainer/Button" instance=ExtResource( 12 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -12.0
margin_right = 444.0
margin_bottom = 12.0

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/StarBarContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 444.0
margin_bottom = 56.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )

[node name="MAG" parent="PanelContainer/MarginContainer/VBoxContainer/StarBarContainer/VBoxContainer/Button2" instance=ExtResource( 12 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -12.0
margin_right = 444.0
margin_bottom = 12.0

[node name="Button3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/StarBarContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 444.0
margin_bottom = 86.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )

[node name="VIT" parent="PanelContainer/MarginContainer/VBoxContainer/StarBarContainer/VBoxContainer/Button3" instance=ExtResource( 12 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -12.0
margin_right = 444.0
margin_bottom = 12.0

[node name="Button4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/StarBarContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 444.0
margin_bottom = 116.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )

[node name="AGI" parent="PanelContainer/MarginContainer/VBoxContainer/StarBarContainer/VBoxContainer/Button4" instance=ExtResource( 12 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -12.0
margin_right = 444.0
margin_bottom = 12.0

[node name="Button5" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/StarBarContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 444.0
margin_bottom = 146.0
focus_neighbour_bottom = NodePath("../Button")
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )

[node name="LUC" parent="PanelContainer/MarginContainer/VBoxContainer/StarBarContainer/VBoxContainer/Button5" instance=ExtResource( 12 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -12.0
margin_right = 444.0
margin_bottom = 12.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 1014.0
margin_bottom = 574.0
custom_constants/separation = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 269.0
margin_bottom = 280.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 269.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Skills"

[node name="SkillContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 269.0
margin_bottom = 280.0
rect_min_size = Vector2( 265, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 15 )
script = ExtResource( 16 )

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SkillContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 267.0
margin_bottom = 254.0
rect_min_size = Vector2( 265, 252 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SkillContainer/ScrollContainer"]
margin_right = 265.0
margin_bottom = 252.0
size_flags_horizontal = 0

[node name="SkillButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SkillContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]

[node name="SkillButton2" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SkillContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]
margin_top = 32.0
margin_bottom = 60.0

[node name="SkillButton3" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SkillContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]
margin_top = 64.0
margin_bottom = 92.0

[node name="SkillButton4" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SkillContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]
margin_top = 96.0
margin_bottom = 124.0

[node name="SkillButton5" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SkillContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]
margin_top = 128.0
margin_bottom = 156.0

[node name="SkillButton6" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SkillContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]
margin_top = 160.0
margin_bottom = 188.0

[node name="SkillButton7" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SkillContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]
margin_top = 192.0
margin_bottom = 220.0

[node name="SkillButton8" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SkillContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]
margin_top = 224.0
margin_bottom = 252.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 275.0
margin_right = 544.0
margin_bottom = 280.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 269.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "To Learn"

[node name="UnlearnedSkillContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 269.0
margin_bottom = 280.0
rect_min_size = Vector2( 265, 239 )
custom_styles/panel = ExtResource( 15 )
script = ExtResource( 16 )
unlearned = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/UnlearnedSkillContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 267.0
margin_bottom = 254.0
rect_min_size = Vector2( 265, 252 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/UnlearnedSkillContainer/ScrollContainer"]

[node name="TextBox" parent="." instance=ExtResource( 17 )]
visible = false
modulate = Color( 1, 1, 1, 0 )

[editable path="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel5"]
[editable path="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel"]
[editable path="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel2"]
[editable path="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel3"]
[editable path="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel4"]
[editable path="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel6"]
[editable path="PanelContainer/MarginContainer/VBoxContainer/AffinityPanelContainer/HBoxContainer/AffinityPanel7"]
